--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,9 @@
-server: # REST and WS server
+server:
   port: DYNAMICPORT
   address: 0.0.0.0
+spring:
+  main:
+    banner-mode: log
 lavalink:
   server:
     password: "verysecurepassword"
@@ -14,34 +17,25 @@ lavalink:
       http: true
       local: false
     bufferDurationMs: 400
-    youtubePlaylistLoadLimit: 6 # Number of pages at 100 each
+    youtubePlaylistLoadLimit: 3
     youtubeSearchEnabled: true
     soundcloudSearchEnabled: true
     gc-warnings: true
-    #ratelimit:
-      #ipBlocks: ["1.0.0.0/8", "..."] # list of ip blocks
-      #excludedIps: ["...", "..."] # ips which should be explicit excluded from usage by lavalink
-      #strategy: "RotateOnBan" # RotateOnBan | LoadBalance | NanoSwitch | RotatingNanoSwitch
-      #searchTriggersFail: true # Whether a search 429 should trigger marking the ip as failing
-      #retryLimit: -1 # -1 = use default lavaplayer value | 0 = infinity | >0 = retry will happen this numbers times
-
+    
 metrics:
   prometheus:
     enabled: false
     endpoint: /metrics
-
+    
 sentry:
   dsn: ""
-#  tags:
-#    some_key: some_value
-#    another_key: another_value
-
+  
 logging:
   file:
-    max-history: 5
-    max-size: 5MB
+    max-history: 1
+    max-size: 3MB
   path: ./logs/
-
+  
   level:
     root: INFO
     lavalink: INFO
