--- a/config.json
+++ b/config.json
@@ -1,11 +1,4 @@
 {
-    "prefix": "!",
-    "nodes": [
-        {
-            "id": "1",
-            "host": "localhost",
-            "port": "2333",
-            "password": "verysecurepassword"
-        }
-    ]
+    "prefix": "!"
+
 }
